turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:64: error: not found: value leverStylo
  leverStylo()
  ^Source:69: error: not found: value baisserStylo
  baisserStylo()
  ^